Fix code quality violations: checkstyle, PMD, and test errors
- Fix checkstyle line length warnings in CalendarEventRepository and PacienteRepository
- Fix PMD InefficientEmptyStringCheck: replace trim().isEmpty() with isBlank()
- Fix PMD ImplicitFunctionalInterface: add @FunctionalInterface to SearchService
- Fix SearchControllerTest Mockito matcher issues: use eq() for key parameter
- Make lenient stubbing in SearchControllerTest to avoid unnecessary stubbing errors

All tests passing (335 tests, 0 failures, 0 errors)
Checkstyle: 0 violations
PMD: 0 violations
SpotBugs: 0 violations